--- a/templates/answer.html
+++ b/templates/answer.html
@@ -4,7 +4,7 @@
     <title>Result</title>
 </head>
 <body>
-    <h1>Result</h1>
+    <h1>Result-New</h1>
     <p>The product of the two numbers is: {{ product }}</p>
 </body>
 </html>
