--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>Simple Calculator</title>
 </head>
 <body>
-    <h1>Simple Multiplication</h1>
+    <h1>Simple Calc</h1>
     <form method="post">
         <label for="num1">Enter the first number:</label>
         <input type="text" id="num1" name="num1" required><br>
